--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Matheus Brito",
   "license": "ISC",
   "dependencies": {
+    "gifsicle": "^5.1.0",
+    "pngquant-bin": "^6.0.0",
     "sharp": "^0.26.3"
+  },
+  "devDependencies": {
+    "compress-images": "^1.9.5"
   }
 }
